# neohookean

./: CMakeLists.txt  analysis.h  analysis_cuda.h  derivatives_verification  derivatives_verification.cu  energy_cuda.h  mesh.h  physics.h  residual_cuda.h  test  test.cpp  test.cu  tetrahedral.h
